--- a/template.ipynb
+++ b/template.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "intro.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMXnmUG+aGSoInFRI00wUaI",
+      "authorship_tag": "ABX9TyPgaB+oBuWBDKWeF2PBl5AR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Nk-lplWsbar2",
-        "outputId": "baaf8c3b-668e-4a8c-9d85-11dc236d081a"
+        "outputId": "103db8ba-71f2-4ff2-d1c0-ec0a95c8b5f0"
       },
       "source": [
         "print('Hello World')"
@@ -46,6 +46,29 @@
           "name": "stdout",
           "text": [
             "Hello World\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tODBRhWodgZM",
+        "outputId": "5f45208a-3e4e-4c86-dcc0-cc77e85a6b47",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "print('Hello Colab')"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello Colab\n"
           ]
         }
       ]
